Style tracks/ Overflow Correct

--- a/src/page/landing/index.css
+++ b/src/page/landing/index.css
@@ -7,6 +7,7 @@
 
 .landing > img{
     width: 100%;
+    max-width: 830px;
 }
 
 .landing > a{
